# server/src/swagger.ts
@@ -1,25 +1,18 @@
+require('dotenv').config()
 import swaggerAutogen from 'swagger-autogen';
 
 const outputFile = './swagger.json';
 const endpointsFiles = [
-    '../src/router/problem.ts',
-    // '../src/router/rootMethods.ts',
-    // '../src/router/HWRootMethods.ts',
-    // '../src/router/linearMethods.ts',
-    // '../src/router/interpolationMethods.ts',
-    // '../src/router/Regression.ts',
-    // '../src/router/integration.ts',
-    // '../src/router/Differentiation.ts',
+    '../src/router/problem.ts'
 ];
 
-// Generate Swagger documentation
 const doc = {
     info: {
         title: 'Numer API',
         description: 'Numer API',
     },
-    host: 'numer-api.unknowkubbrother.net',
-    schemes: ['https'],
+    host: process.env.DOMAIN  || 'numer-api.unknowkubbrother.net',
+    schemes: process.env.DOMAIN ? ['http'] : ['https'],
 };
 
 swaggerAutogen(outputFile, endpointsFiles, doc);
